WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301079
WebGL: GL_ANGLE_pack_reverse_row_order is not used even if it exists
https://bugs.webkit.org/show_bug.cgi?id=301079
Summary
WebGL: GL_ANGLE_pack_reverse_row_order is not used even if it exists
Kimmo Kinnunen
Reported
2025-10-20 02:07:38 PDT
WebGL: GL_ANGLE_pack_reverse_row_order is not used even if it exists
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-10-20 02:07:44 PDT
<
rdar://problem/163013354
>
Kimmo Kinnunen
Comment 2
2025-10-20 02:09:54 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52647
EWS
Comment 3
2025-10-24 05:26:26 PDT
Committed
302084@main
(5647a3a9be22): <
https://commits.webkit.org/302084@main
> Reviewed commits have been landed. Closing PR #52647 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug