WebGL: GL_ANGLE_pack_reverse_row_order is not used even if it exists https://bugs.webkit.org/show_bug.cgi?id=301079 rdar://163013354

Reviewed by Dan Glastonbury.

Fix a typo in the extension name.
Move the requesting to the GPUP side, to simplify the extension
requesting features.

* Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:
(WebCore::WebGLRenderingContextBase::initializeContextState):
(WebCore::WebGLRenderingContextBase::enableSupportedExtension): Deleted.
* Source/WebCore/html/canvas/WebGLRenderingContextBase.h:
* Source/WebCore/platform/graphics/angle/GraphicsContextGLANGLE.cpp:
(WebCore::GraphicsContextGLANGLE::initialize):

Canonical link: https://commits.webkit.org/302084@main